# rpmrepo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  rpmrepo.spec.rpkg  setup.py
.github/workflows/: ci.yml
rpmrepo/: __init__.py  check.py  cli.py  details.py  download.py  metadata.py  rpmrepo  stats.py
rpmrepo/metadata/: __init__.py  parse_metadata.py
tests/: test_downloader.py  test_local_repo.py
